--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>ZAGREB - galerija</title>
+        <title>ZAGREB - gallery</title>
     </head>
     <body>
         <img src="./history.jpg" width="480" height="320">
